<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="me">我</string>
    <string name="ta">Ta</string>
    <string name="no_network">未联网</string>
    <string name="ok">ok</string>
    <string name="two">两个</string>
    <string name="app_name">咱俩</string>
    <string name="update_title">更新日志</string>
    <string name="installNew">安装新版本</string>
    <string name="haveNewVersion">版本更新</string>
    <string name="later">稍后提醒</string>
    <string name="newReply">新的回复</string>
    <string name="voice">语音</string>
    <string name="pressToRecord">按住录音</string>
    <string name="sayMore">说多点吧～</string>
    <string name="getDataFailed">获取数据失败</string>
    <string name="splashText">昼夜守候，贴心服务</string>
    <string name="netErrorTips">亲，网络有点不给力</string>
    <string name="retry">重试</string>
    <string name="wait">等等</string>
    <string name="continueIt">继续</string>
    <string name="no_net_reopen">未联网</string>
    <string name="hardLoading">努力加载中...</string>
    <string name="loginSystem">教务系统登录</string>
    <string name="continueLogon">继续会话</string>
    <string name="studentId">学号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="wrongOrNet">学号密码错误或未联网</string>
    <string name="bjfu_id">北林学号</string>
    <string name="wrongPwd">学号或密码错误</string>
    <string name="pwdInfo">帐号密码信息只保存在本地\n仅作为自动登录使用</string>
    <string name="pwdHint">可能为身份证前6位</string>
    <string name="pleaseLogin">欢迎使用北京林业大学教务管理系统</string>
    <string name="no_net">未联网</string>
    <string name="systemLogin">教务系统登录</string>
    <string name="pair">配对</string>
    <string name="pairToGame">配对过关</string>
    <string name="clickToPair">点击配对，碰上同一时刻按住按钮的校友</string>
    <string name="isPairing">正在配对...</string>
    <string name="cannot_pair_succeed">未配对成功</string>
    <string name="pair_succeed">配对成功！</string>
    <string name="not_succeed">配对不成功</string>
    <string name="pairedUser_not_respond_or_no_net">对方未应答或未联网</string>
    <string name="pairInfo">和校友配对聊天</string>

    <string name="cancel">取消</string>
    <string name="campusPairTalk">校园配对聊天</string>
    <string name="personInfo">个人信息</string>
    <string name="studentNum">学号</string>
    <string name="studentName">姓名</string>
    <string name="studentInfo">我叫%1$s，我来自%2$sb班，在%3$s年我从老家%4$蠢萌蠢萌地来到了北京林业大学。</string>
</resources>
