<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/splashScreen">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_background_white">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/secretary" />


        <LinearLayout
            android:id="@+id/normalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:gravity="center">

            <TextView
                android:id="@+id/infoView"
                android:text="@string/splashText"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            android:visibility="gone"
            android:gravity="center">

            <TextView
                android:id="@+id/view"
                android:text="@string/netErrorTips"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn_blue_no_corner"
                android:text="@string/retry" />

            <TextView
                android:id="@+id/continueIt"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn_blue_no_corner"
                android:text="@string/continueIt" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>